objects/Mass_Mailing_Campaign__c.object
<CustomObject>
    <fields>
        <fullName>Docket_Count__c</fullName>
        <label>Docket Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mass_Mailing_Campaign_Content__c</fullName>
        <label>Mass Mailing Campaign Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pro_Cons__c</fullName>
        <label>Pro/Cons</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_Pick__c</fullName>
        <description>Docket comment Application.</description>
        <label>Record Type Pick</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Docket_Record_Type_Picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sponsoring_Entity__c</fullName>
        <label>Sponsoring Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>Information on mass mailing campaigns resulting in numerous duplicative comments in response to dockets being managed under the Docket Comments Management system.  (This object's specialized name might be improved if made more general, allowing for easier reuse of the object for other purposes.)</description>
    <label>Mass Mailing Campaign</label>
    <nameField>
        <label>Mass Mailing Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mass Mailing Campaigns</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sponsoring_Entity__c</columns>
        <columns>Pro_Cons__c</columns>
        <columns>Docket_Count__c</columns>
        <columns>Mass_Mailing_Campaign_Content__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Mass_Mailing_Campaign__c.Bristol_Bay</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_1b</fullName>
        <columns>NAME</columns>
        <columns>Sponsoring_Entity__c</columns>
        <columns>Pro_Cons__c</columns>
        <columns>Docket_Count__c</columns>
        <columns>Mass_Mailing_Campaign_Content__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Mass_Mailing_Campaign__c.Waters_of_the_US_Step_1_SUPP</value>
        </filters>
        <label>All WOTUS Step 1</label>
    </listViews>
    <listViews>
        <fullName>BB_Mass_Mailing_Campaigns</fullName>
        <columns>NAME</columns>
        <columns>Mass_Mailing_Campaign_Content__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Mass_Mailing_Campaign__c.Missouri_NNC_Docket</value>
        </filters>
        <label>MO Mass Mailing Campaigns</label>
    </listViews>
    <listViews>
        <fullName>WOTUS_Step_21</fullName>
        <columns>NAME</columns>
        <columns>Sponsoring_Entity__c</columns>
        <columns>Pro_Cons__c</columns>
        <columns>Docket_Count__c</columns>
        <columns>Mass_Mailing_Campaign_Content__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Mass_Mailing_Campaign__c.Waters_of_the_US_Step_2</value>
        </filters>
        <label>WOTUS - Step 2</label>
    </listViews>
    <listViews>
        <fullName>Water_Quality_Certification</fullName>
        <columns>NAME</columns>
        <columns>Sponsoring_Entity__c</columns>
        <columns>Pro_Cons__c</columns>
        <columns>Docket_Count__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Mass_Mailing_Campaign__c.Water_Quality_Certification</value>
        </filters>
        <label>Water Quality Certification</label>
    </listViews>
    <recordTypes>
        <fullName>Bristol_Bay</fullName>
        <active>true</active>
        <label>Bristol Bay</label>
    </recordTypes>
    <recordTypes>
        <fullName>California_Selenium</fullName>
        <active>true</active>
        <label>California Selenium</label>
    </recordTypes>
    <recordTypes>
        <fullName>Missouri_NNC_Docket</fullName>
        <active>true</active>
        <label>Missouri NNC Docket</label>
    </recordTypes>
    <recordTypes>
        <fullName>WOTUS_Recommendations</fullName>
        <active>true</active>
        <label>WOTUS Recommendations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Water_Quality_Certification</fullName>
        <active>true</active>
        <label>Water Quality Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Waters_of_the_US</fullName>
        <active>true</active>
        <label>Waters of the US</label>
    </recordTypes>
    <recordTypes>
        <fullName>Waters_of_the_US_Step_0</fullName>
        <active>true</active>
        <label>Waters of the US – Step 0</label>
    </recordTypes>
    <recordTypes>
        <fullName>Waters_of_the_US_Step_1_SUPP</fullName>
        <active>true</active>
        <label>Waters of the US – Step 1 SUPP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Waters_of_the_US_Step_2</fullName>
        <active>true</active>
        <label>Waters of the US – Step 2</label>
    </recordTypes>
</CustomObject>